--- a/index.html
+++ b/index.html
@@ -9,36 +9,38 @@
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
 body{background:#1a1a1a;color:#fff;transition:0.3s;}
 a{text-decoration:none;color:inherit;}
-img{max-width:100%;display:block;}
+img{max-width:100%;display:block;border-radius:12px;}
 button, select{font-family:'Poppins',sans-serif;}
 button{background:linear-gradient(45deg,#ffb400,#e0a000);color:#000;padding:12px 20px;margin:5px;border:none;border-radius:8px;font-weight:600;cursor:pointer;transition:0.3s;}
-button:hover{opacity:0.9;}
+button:hover{opacity:0.9;transform:scale(1.05);}
 select{padding:8px 12px;margin-left:10px;border-radius:6px;outline:none;border:none;cursor:pointer;}
 
 /* Header */
 header{padding:20px 50px;display:flex;justify-content:space-between;align-items:center;background:rgba(20,20,20,0.95);backdrop-filter:blur(5px);position:sticky;top:0;z-index:10;}
-.logo{font-size:1.8rem;font-weight:700;color:#ffd966;}
+.logo{font-size:2rem;font-weight:700;color:#ffd966;}
 nav a{margin-left:25px;font-weight:500;color:#fff;transition:0.3s;}
 nav a:hover{color:#ffd966;}
 
 /* Hero */
-.hero{padding:60px 20px;text-align:center;}
-.hero h1{font-size:2.5rem;color:#ffd966;margin-bottom:15px;}
-.hero p{font-size:1.2rem;color:#ccc;}
+.hero{position:relative;text-align:center;color:#fff;}
+.hero img{width:100%;height:60vh;object-fit:cover;opacity:0.6;}
+.hero-text{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);}
+.hero-text h1{font-size:3rem;color:#ffd966;margin-bottom:15px;text-shadow:2px 2px 8px #000;}
+.hero-text p{font-size:1.2rem;color:#fff;text-shadow:1px 1px 6px #000;}
 
 /* Category Section */
-.section{padding:60px 20px;max-width:1000px;margin:0 auto;}
-.section h2{font-size:1.8rem;color:#ffd966;margin-bottom:30px;border-bottom:1px solid #ffd966;display:inline-block;padding-bottom:5px;}
-.category-card{display:inline-block;width:calc(33.333% - 20px);background: rgba(255,255,255,0.05);backdrop-filter: blur(10px);border-radius:10px;padding:15px;margin:10px;text-align:center;transition:0.3s;vertical-align:top;}
-.category-card:hover{transform:scale(1.02);}
-.category-card img{border-radius:10px;margin-bottom:10px;}
-.category-card h3{color:#ffb400;margin-bottom:10px;}
+.section{padding:60px 20px;max-width:1100px;margin:0 auto;text-align:center;}
+.section h2{font-size:2rem;color:#ffd966;margin-bottom:40px;border-bottom:2px solid #ffd966;display:inline-block;padding-bottom:5px;}
+.category-cards{display:flex;justify-content:space-between;flex-wrap:wrap;}
+.category-card{background: rgba(255,255,255,0.05);backdrop-filter: blur(10px);border-radius:15px;padding:20px;margin:10px;width:32%;transition:0.3s;}
+.category-card:hover{transform:scale(1.03);box-shadow:0 10px 25px rgba(0,0,0,0.6);}
+.category-card h3{color:#ffb400;margin-bottom:10px;font-size:1.2rem;}
 
 /* Footer */
-footer{background:#121212;text-align:center;padding:20px;color:#aaa;margin-top:50px;font-size:0.9rem;}
+footer{background:#121212;text-align:center;padding:25px;color:#aaa;margin-top:50px;font-size:0.9rem;}
 
 /* Responsive */
-@media(max-width:992px){.category-card{width:calc(50% - 20px);}}
+@media(max-width:992px){.category-card{width:48%;}}
 @media(max-width:600px){.category-card{width:100%;margin:10px 0;}}
 </style>
 </head>
@@ -61,13 +63,17 @@ footer{background:#121212;text-align:center;padding:20px;color:#aaa;margin-top:5
 
 <!-- Hero Section -->
 <section class="hero">
-  <h1 id="hero-title">Delicious Pizza, Burgers & Fast Food</h1>
-  <p id="hero-subtitle">Fresh, Hot & Ready to Order</p>
+  <img src="images/hero-food.jpg" alt="Delicious Food">
+  <div class="hero-text">
+    <h1 id="hero-title">Delicious Pizza, Burgers & Fast Food</h1>
+    <p id="hero-subtitle">Fresh, Hot & Ready to Order</p>
+  </div>
 </section>
 
 <!-- Categories Section -->
 <section class="section">
 <h2 id="category-title">Our Specials</h2>
+<div class="category-cards">
 
 <!-- Pizza Card -->
 <div class="category-card">
@@ -93,11 +99,13 @@ footer{background:#121212;text-align:center;padding:20px;color:#aaa;margin-top:5
 <button onclick="location.href='contact.html'">Online Order</button>
 </div>
 
+</div>
 </section>
 
 <!-- Footer -->
 <footer>
-Location: Muzaffargarh | Phone: 03080432842 | WhatsApp: 03080432842 | Business Hours: 9 AM - 10 PM<br>
+Location: Muzaffargarh | Phone: <a href="tel:03080432842">03080432842</a> | WhatsApp: <a href="https://wa.me/03080432842" target="_blank">03080432842</a> | Email: <a href="mailto:awaisaziz8832@gmail.com">awaisaziz8832@gmail.com</a><br>
+Business Hours: 9 AM - 10 PM<br>
 &copy; 2025 Grill & Slice. All Rights Reserved.
 </footer>
 
